<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp"
            app:strokeColor="@color/white"
            android:id="@+id/img_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_account_circle_24"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/user_image"/>
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_card"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:id="@+id/username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_card"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_below="@+id/username"
            android:layout_marginTop="0dp"
            android:text="@string/email"
            android:id="@+id/email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/img_card"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/dummy_txt"
            android:id="@+id/report"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>