<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/profile_img_card"
        app:strokeWidth="0dp"
        app:cardCornerRadius="35dp">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profile_img"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_account_circle_24"/>
    </com.google.android.material.card.MaterialCardView>




    <RelativeLayout
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/profile_img_card"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textColor="@color/black"
            android:text="@string/username"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_below="@+id/name"
            android:textColor="@color/black"
            android:text="@string/email"/>

    </RelativeLayout>

</RelativeLayout>