<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="25dp"
            android:id="@+id/toolbar">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/baseline_arrow_back"
                android:id="@+id/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Profile"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/back"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="60dp"
            app:strokeWidth="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/toolbar"
            app:cardBackgroundColor="@color/white"
            android:id="@+id/profile_img_card">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/user_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/baseline_account_circle_24" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="30dp"
            android:background="@color/white"
            android:layout_height="30dp"
            android:src="@drawable/baseline_autorenew"
            android:layout_toEndOf="@+id/profile_img_card"
            android:layout_below="@+id/profile_img_card"
            android:layout_marginStart="-35dp"
            android:layout_marginTop="-40dp"
            android:id="@+id/img_picker"
            android:contentDescription="@string/user_image" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_username"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_img_card"
            android:text="John Doe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="7dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_username"
            android:text="example@gmail.com"/>


        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First name"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/tv_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bg"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="John"
            android:layout_below="@+id/tv_firstname"
            android:textColorHint="#9F9F9F"
            android:id="@+id/firstname"/>

        <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last name"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/firstname"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Doe"
            android:textColor="@color/black"
            android:layout_below="@+id/tv_lastname"
            android:textColorHint="#9F9F9F"
            android:id="@+id/lastname"/>



        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastname"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_gender"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#757575">

            <AutoCompleteTextView
                android:id="@+id/gender"
                style="@style/CustomAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/contact"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tel"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/txt_bg"
            android:hint="@string/_0xx_xxx_xxxx"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="#9F9F9F" />




        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/tel"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/address"
            android:textColor="@color/black"
            android:id="@+id/et_address"
            android:layout_below="@+id/tv_address"
            android:textColorHint="#9F9F9F"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_address"
            android:layout_marginTop="20dp"
            android:id="@+id/edit_profile_btn"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            app:cornerRadius="10dp"
            android:layout_marginBottom="30dp"
            android:text="Update Profile"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progress_bar"
            android:visibility="gone"/>


    </RelativeLayout>

</ScrollView>